# raytracing-oneweekend

./: .gitignore  Cargo.toml  README.md  gen_screenshots.sh  run.sh
scenes/: metal.yml  sphere.yml  test.yml
src/: camera.rs  fancy_window.rs  hittable.rs  hittablelist.rs  image.rs  main.rs  material.rs  ray.rs  vectors.rs
src/shapes/: sphere.rs
