[package]
name = "raytracing-oneweekend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
anyhow = "1.0.45"
float-cmp = "0.9.0"
# minifb = "0.19.3"
rand = "0.8.4"
rayon = "1.5.1"
indicatif = "0.16.2"
